--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
     "react-masonry-css": "^1.0.16",
     "react-modal": "^3.16.1",
